fix weird jumping when expanding a wide thunk

--- a/docs/less/content.less
+++ b/docs/less/content.less
@@ -351,10 +351,11 @@ h3 .section-anchor::before {
     .section-label {
       font-family: @monospace-font;
       color: var(--base03);
-      float: right;
       display: block;
       padding: 5px;
       padding-left: 1ch;
+      position: absolute;
+      right: 0;
     }
   }
 }
